syntax = "proto3";
import "google/protobuf/empty.proto";
package zfstracer;

service ZfsTracer {
  rpc SetTracingLevel(TraceLevel) returns (google.protobuf.Empty);
}

message TraceLevel {
  Level level = 1 ;
}


enum Level {
  TRACE = 0;
  DEBUG = 1;
  INFO = 2;
  WARN = 3;
  ERROR = 4;
}
